--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>fck-honey test page</title>
     <script src="../dist/honey-detect.js"></script>
+    <script>
+      let detectionCount = 0;
+
+      function log(msg) {
+        const logEl = document.getElementById("log");
+        if (logEl) logEl.textContent += msg + "\n";
+      }
+
+      window.fckHoneyHandle = window.fckHoney.listen(
+        (el, warn) => {
+          log("Matched overlay: #" + el.id + " z-index " + getComputedStyle(el).zIndex);
+          warn(
+            '<div class="modal" role="dialog" aria-modal="true" aria-labelledby="honey-modal-title">' +
+              '<h2 id="honey-modal-title">Please disable the Honey extension</h2>' +
+              "<p>This site can’t proceed with Honey enabled. Please disable it to continue your checkout.</p>" +
+              '<iframe src="https://www.youtube.com/embed/wwB3FmbcC88" title="Why Honey is a scam (video)" ' +
+              'allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" ' +
+              "allowfullscreen></iframe>" +
+              "</div>"
+          );
+          detectionCount += 1;
+          const debugEl = document.getElementById("debug");
+          if (debugEl) debugEl.textContent = "Detections: " + detectionCount;
+        },
+        { debug: true, removeHoney: true }
+      );
+    </script>
     <style>
       body {
         font-family: Georgia, "Times New Roman", serif;
@@ -21,15 +48,6 @@
         background: transparent;
         z-index: 2147483640;
         display: block;
-      }
-      .modal-backdrop {
-        position: fixed;
-        inset: 0;
-        background: rgba(0, 0, 0, 0.55);
-        display: none;
-        align-items: center;
-        justify-content: center;
-        z-index: 2147483641;
       }
       .modal {
         width: 92%;
@@ -51,16 +69,6 @@
         width: 100%;
         height: 240px;
         border: 0;
-      }
-      .modal-close {
-        position: absolute;
-        top: 8px;
-        right: 10px;
-        border: 0;
-        background: transparent;
-        font-size: 20px;
-        line-height: 1;
-        cursor: pointer;
       }
       #debug {
         margin-top: 12px;
@@ -91,41 +99,8 @@
     <button id="spawn">Simulate Honey initialization</button>
     <pre id="log"></pre>
     <div id="debug" aria-live="polite">Detections: 0</div>
-    <div class="modal-backdrop" id="honey-modal">
-      <div class="modal" role="dialog" aria-modal="true" aria-labelledby="honey-modal-title">
-        <button class="modal-close" id="modal-close" aria-label="Close">×</button>
-        <h2 id="honey-modal-title">Please disable the Honey extension</h2>
-        <p>
-          This site can’t proceed with Honey enabled. Please disable it to continue your checkout.
-        </p>
-        <iframe
-          src="https://www.youtube.com/embed/wwB3FmbcC88"
-          title="Why Honey is a scam (video)"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-      </div>
-    </div>
-
     <script>
-      const logEl = document.getElementById("log");
       const btnSpawn = document.getElementById("spawn");
-      const modal = document.getElementById("honey-modal");
-      const modalClose = document.getElementById("modal-close");
-      const debugEl = document.getElementById("debug");
-      let detectionCount = 0;
-
-      function log(msg) {
-        logEl.textContent += msg + "\n";
-      }
-
-      const handle = window.fckHoney.listen((el) => {
-        log("Matched overlay: #" + el.id + " z-index " + getComputedStyle(el).zIndex);
-        const liveModal = document.getElementById("honey-modal") || modal;
-        if (liveModal) liveModal.style.display = "flex";
-        detectionCount += 1;
-        if (debugEl) debugEl.textContent = "Detections: " + detectionCount;
-      }, { debug: true });
 
       function makeOverlay() {
         const id = crypto.randomUUID ? crypto.randomUUID() : "00000000-0000-0000-0000-000000000000";
@@ -141,11 +116,6 @@
         if (current) current.remove();
         current = makeOverlay();
       });
-      if (modalClose && modal) {
-        modalClose.addEventListener("click", () => {
-          modal.style.display = "none";
-        });
-      }
     </script>
   </body>
 </html>
