--- a/example/auto.html
+++ b/example/auto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>fck-honey test page (auto)</title>
+    <title>coupon-shield test page (auto)</title>
     <script src="../dist/auto.js"></script>
     <script>
       let detectionCount = 0;
@@ -45,7 +45,7 @@
     </style>
   </head>
   <body>
-    <h1>fck-honey demo</h1>
+    <h1>coupon-shield demo</h1>
     <p>Build first: <code>npm run build</code>. Then open this file in a browser.</p>
     <button id="spawn">Simulate Honey initialization</button>
     <button id="spawn-capitalone">Simulate Capital One</button>
